# network-hs

./: .gitignore  network-hs.cabal
app/: Main.hs
src/: Lib.hs
